--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,10 +8,103 @@
     <link rel="icon" type="image/png" href="images/icon-site.png">
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/fonts.css">
+    <link rel="stylesheet" href="styles/grid.css">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/responsive.css">
 </head>
+
 <body>
+
+    <header class="header">
+        <div class="container">
+            <nav class="nav">
+                <div class="nav__wrapper">
+                    <a href="#" class="app-logo">
+                        <img src="images/svgs/logo.svg" class="app-logo--img" alt="Camping">
+                    </a>
+                    <ul class="menu">
+                        <li class="menu__item">
+                            <a href="#" class="menu__link menu__link--active">Home</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="#" class="menu__link">Destination</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="#" class="menu__link">Near me</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="#" class="menu__link">Events</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="#" class="menu__link">Blog</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="#" class="menu__link">Gallery</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="#" class="menu__link">About</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="#" class="menu__link">Contact us</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="mobile-nav-menu">
+                    <h2 class="mobile-nav-menu__title">
+                        Camping Website
+                    </h2>
+                    <ul class="mobile-menu">
+                        <li class="mobile-menu__item">
+                            <a href="#" class="mobile-menu__link">Home</a>
+                        </li>
+                        <li class="mobile-menu__item">
+                            <a href="#" class="mobile-menu__link">Destination</a>
+                        </li>
+                        <li class="mobile-menu__item">
+                            <a href="#" class="mobile-menu__link">Near me</a>
+                        </li>
+                        <li class="mobile-menu__item">
+                            <a href="#" class="mobile-menu__link">Events</a>
+                        </li>
+                        <li class="mobile-menu__item">
+                            <a href="#" class="mobile-menu__link">Blog</a>
+                        </li>
+                        <li class="mobile-menu__item">
+                            <a href="#" class="mobile-menu__link">Gallery</a>
+                        </li>
+                        <li class="mobile-menu__item">
+                            <a href="#" class="mobile-menu__link">About</a>
+                        </li>
+                        <li class="mobile-menu__item">
+                            <a href="#" class="mobile-menu__link">Contact us</a>
+                        </li>
+                    </ul>
+                    <div class="mobile-nav-menu__links">
+                        <a href="#" class="mobile-nav-menu__link">Sign up</a>
+                        <a href="#" class="mobile-nav-menu__link mobile-nav-menu__link--border">Sign in</a>
+                    </div>
+                </div>
+                <div class="nav__links">
+                    <a href="#" class="nav__link">Sign up</a>
+                    <a href="#" class="nav__link nav__link--border">Sign in</a>
+                </div>
+                <div class="nav__btn">
+                    <span class="nav__btn-line"></span>
+                </div>
+            </nav>
+            <div class="header-content">
+                <h1 class="header-content__title">Find Yourself Outside.</h1>
+                <p class="header-content__caption">Book unique camping experiences on over 300,000 campsites, cabins, RV parks, public parks and more.</p>
+                <a href="#" class="btn header-content__link">Discover</a>
+            </div>
+        </div>
+    </header>
+    <main class="main"></main>
+    <footer class="footer"></footer>
+
+
     
+    <script src="scripts/script.js"></script>
 </body>
+
 </html>
